# HydroShot

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: fonts.css  index.html  styles.css  tokens.css
docs/superpowers/plans/: 2026-03-24-hydroshot-phase2a.md  2026-03-24-hydroshot.md
docs/superpowers/specs/: 2026-03-24-hydroshot-design.md  2026-03-24-hydroshot-phase2a-design.md
examples/: capture_test.rs  generate_icon.rs
src/: autostart.rs  cli.rs  color_picker.rs  config.rs  countdown.rs  export.rs  font.rs  geometry.rs  history.rs  history_ui.rs  hotkey.rs  icons.rs  installer.rs  lib.rs  main.rs  ocr.rs  pin.rs  renderer.rs  settings_ui.rs  state.rs  theme.rs  tray.rs  upload.rs  window_detect.rs
src/capture/: mod.rs  wayland.rs  windows.rs  x11.rs
src/overlay/: mod.rs  selection.rs  toolbar.rs
src/tools/: arrow.rs  circle.rs  highlight.rs  line.rs  measurement.rs  mod.rs  pencil.rs  pixelate.rs  rectangle.rs  rounded_rect.rs  spotlight.rs  step_marker.rs  text.rs
tests/: annotation_ops_tests.rs  config_tests.rs  export_tests.rs  geometry_tests.rs  history_tests.rs  hotkey_tests.rs  measurement_tests.rs  pencil_tests.rs  pixelate_tests.rs  resize_tests.rs  rounded_rect_tests.rs  selection_tests.rs  spotlight_tests.rs  text_tests.rs  tools_tests.rs  undo_tests.rs
wix/: License.rtf  main.wxs
