[package]
name = "hydroshot"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
tray-icon = "0.19"
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
arboard = { version = "3", features = ["image-data"] }
rfd = "0.15"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
