[package]
name = "hydroshot"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
tray-icon = "0.19"
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
arboard = { version = "3", features = ["image-data"] }
rfd = "0.15"
chrono = "0.4"
global-hotkey = "0.6"
fontdue = "0.9"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
notify-rust = "4"
resvg = "0.44"

# Optimize dependencies even in dev builds — critical for GUI responsiveness.
# Without this, pixel operations (tiny-skia, fontdue, softbuffer) are 10-50x slower.
[profile.dev.package."*"]
opt-level = 2

# Keep our own code at opt-level 1 for faster compile + reasonable speed
[profile.dev]
opt-level = 1

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_UI_Controls_Dialogs",
] }
